<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="174dp"
            android:text="Map size:"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="50dp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="55dp"
            android:text="Lock orientation"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="140dp"
            android:text="Bluetooth status:"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="139dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="428dp"
            android:text="Not broadcasting"
            android:textColor="#ff0000"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>