<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_input"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/title_input" />

    <item
        android:id="@+id/navigation_navigation"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/title_navigation" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_settings" />

</menu>
